force-app/main/default/objects/Project_Numbering_Setting__mdt/Project_Numbering_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Project Numbering Setting</label>
    <pluralLabel>Project Numbering Settings</pluralLabel>
</CustomObject>