force-app/main/default/objects/Project_Numbering_Setting__mdt/fields/Invoice_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Prefix__c</fullName>
    <label>Invoice Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>