force-app/main/default/objects/Project_Numbering_Setting__mdt/fields/Invoice_Prefix_Retail__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Prefix_Retail__c</fullName>
    <inlineHelpText>Optional. Invoice prefix used when the Unit&apos;s Type is Retail (overrides Invoice Prefix for that project).</inlineHelpText>
    <label>Invoice Prefix (Retail)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>